--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: comosus-client-jenkins 
+  name: comosus-frontend-app
   labels:
-    app: comosus-client
+    app: comosus-frontend-app
 spec:
   selector:
     matchLabels:
-        app: comosus-client
+        app: comosus-frontend-app
   replicas: 3
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: comosus-client
+        app: comosus-frontend-app
     spec:
       containers:
         - name: comosus-client
