--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: comosus-frontend-app
+  name: client-comosus
   labels:
-    app: comosus-frontend-app
+    app: client-comosus
 spec:
   selector:
     matchLabels:
-        app: comosus-frontend-app
+        app: client-comosus
   replicas: 3
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: comosus-frontend-app
+        app: client-comosus
     spec:
       containers:
         - name: comosus-client
